Fix for jdk11 Signed-off-by:Bart Hanssens <bart.hanssens@bosa.fgov.be>